Ensure images and figures are aligned centre by default

--- a/_sass/bland/_base.scss
+++ b/_sass/bland/_base.scss
@@ -213,7 +213,7 @@ figure,
 img {
   border-radius: .25rem;
   display: block;
-  margin: 0 0 1rem;
+  margin: 0 auto 1rem;
 }
 
 figure > figcaption {
